fixed gap between text for each image in second section

--- a/css/style.css
+++ b/css/style.css
@@ -99,6 +99,7 @@ body {
     display: flex;
     align-items: center;
     justify-content: space-between;
+    gap: 10px;
     margin-bottom: 40px;
 }
 
